--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Include both normal (ital=0) and italic (ital=1) weights so <i>/<em> render properly.
          Previously only upright weights were loaded while font-synthesis was disabled, making italics appear normal. -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <title>FundFountain - Frontend ReactJS</title>
